<?xml version="1.0" encoding="utf-8"?>
<!--
 Nombre del proyecto: FreeTime
 Autores: Lucas Baruja, Leonardo Duarte, Ezequiel Arce, Iván Samudio
 Descripción: Layout para el fragmento de perfil de usuario.
 Fecha de creación: 04/11/2024
 Forma de utilizar: Muestra y permite la edición del perfil del usuario.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título del perfil -->
        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"
            android:textAlignment="center"
            android:layout_marginTop="15sp"/>

        <!-- Información del usuario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_name"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_email"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp" />

        <!-- Configuración -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_settings"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"
            android:fontFamily="@font/poppins_bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textSize="15sp"
            android:paddingTop="16dp"
            android:fontFamily="@font/poppins_bold"/>

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/language_options"
            android:padding="8dp"
            android:fontFamily="@font/poppins_regular" />

        <Button
            android:id="@+id/apply_language_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_language"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp" />
        <!-- Acerca de -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_section_about"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:fontFamily="@font/poppins_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_version"
            android:paddingTop="4dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_developer"
            android:paddingTop="4dp"
            android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_release_date"
            android:paddingTop="4dp"
            android:fontFamily="@font/poppins_regular"/>

        <!-- Botón de Cerrar Sesión -->
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            android:backgroundTint="@color/FreeTimeGreen"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>
