<?xml version="1.0" encoding="utf-8"?>
<!--
 Nombre del proyecto: FreeTime
 Autores: Lucas Baruja, Leonardo Duarte, Ezequiel Arce, Iván Samudio
 Descripción: Layout para la pantalla de seguimiento de finalización de actividades.
 Fecha de creación: 04/11/2024
 Forma de utilizar: Estructura la vista que muestra el final y el registro de la actividad completada.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/white">

    <!-- Mensaje de agradecimiento -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_feedback_title"
        android:textSize="26sp"
        android:textColor="@color/FreeTimeGreen"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingBottom="15dp" />



    <!-- Mensaje de actividad -->
    <TextView
        android:id="@+id/activityNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_feedback_activity_prompt"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingBottom="10dp" />

    <!-- Mensaje de descripción -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_feedback_description"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:paddingBottom="40dp" />

    <!-- Botón "Ya terminé la actividad" -->
    <Button
        android:id="@+id/btnEndActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_end_activity"
        android:backgroundTint="@color/FreeTimeGreen"
        android:textColor="@android:color/white"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"/>

    <!-- Botón "Ver mi calendario" -->
    <Button
        android:id="@+id/btnViewCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_calendar"
        android:backgroundTint="@color/FreeTimeGreen"
        android:textColor="@android:color/white"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:textSize="16sp"/>

</LinearLayout>
